<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_events">

    <fragment
        android:id="@+id/navigation_events"
        android:name="es.upm.miw.helpi.ui.events.TabFragment"
        android:label="@string/title_events"
        tools:layout="@layout/fragment_tab" />

    <fragment
        android:id="@+id/navigation_news"
        android:name="es.upm.miw.helpi.ui.notices.NoticesFragment"
        android:label="@string/title_notices"
        tools:layout="@layout/fragment_notices" />

    <fragment
        android:id="@+id/navigation_organizations"
        android:name="es.upm.miw.helpi.ui.organizations.OrganizationsFragment"
        android:label="@string/title_organizations"
        tools:layout="@layout/fragment_organizations" />

    <fragment
        android:id="@+id/navigation_ranking"
        android:name="es.upm.miw.helpi.ui.ranking.RankingFragment"
        android:label="@string/title_ranking"
        tools:layout="@layout/fragment_ranking" />
</navigation>